proxyStuff/meta/iptables
# Generated on Tue Dec 12 00:46:36 CST 2017
*nat
:SHADOWSOCKS - [0:0]
-A SHADOWSOCKS -d 0.0.0.0/8 -j RETURN
-A SHADOWSOCKS -d 10.0.0.0/8 -j RETURN
-A SHADOWSOCKS -d 100.64.0.0/10 -j RETURN
-A SHADOWSOCKS -d 127.0.0.0/8 -j RETURN
-A SHADOWSOCKS -d 169.254.0.0/16 -j RETURN
-A SHADOWSOCKS -d 172.16.0.0/12 -j RETURN
-A SHADOWSOCKS -d 192.0.0.0/24 -j RETURN
-A SHADOWSOCKS -d 192.0.2.0/24 -j RETURN
-A SHADOWSOCKS -d 192.88.99.0/24 -j RETURN
-A SHADOWSOCKS -d 192.168.0.0/16 -j RETURN
-A SHADOWSOCKS -d 198.18.0.0/15 -j RETURN
-A SHADOWSOCKS -d 198.51.100.0/24 -j RETURN
-A SHADOWSOCKS -d 203.0.113.0/24 -j RETURN
-A SHADOWSOCKS -d 224.0.0.0/4 -j RETURN
-A SHADOWSOCKS -d 255.255.255.255 -j RETURN
# Customized rules
-A SHADOWSOCKS -m set --match-set chnroute dst -j RETURN
# REDIRECT to SHADOWSOCKS
-A PREROUTING -p tcp -j SHADOWSOCKS
-A OUTPUT -p tcp -j SHADOWSOCKS
COMMIT
